# customer-churn-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_services.py
api/: api.py
dashboard/: app.py  requirements.txt
data/processed/: cleaned_telco_churn.csv
model/: churn_model.pkl  feature_names.pkl  preprocessor.pkl  scaler.pkl
notebooks/: Customer_Churn_Project.ipynb  Engineering_Pipeline.ipynb  blueprint.md  research_notebook.ipynb
src/: modeling.py  preprocessing.py  train_model.py  utils.py
src/customer_churn_ml/: __init__.py  config.py  constants.py  predict.py  utils.py
src/customer_churn_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/customer_churn_ml/data/: __init__.py  loader.py
src/customer_churn_ml/interpret/: __init__.py  feature_importance.py
src/customer_churn_ml/preprocessing/: __init__.py  preprocessor.py  scalar.py
src/customer_churn_ml/training/: __init__.py  evaluator.py  trainer.py
tests/: conftest.py  test_evaluator.py  test_feature_importance.py  test_loader.py  test_preprocessor.py  test_scaler.py  test_trainer.py  test_utils.py
