[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
 
[project]
name = "customer_churn_ml"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "matplotlib",
    "seaborn",
]
 
[tool.setuptools.packages.find]
where = ["src"]
 